--- a/index.html
+++ b/index.html
@@ -14,6 +14,25 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="container">
+    <nav>
+      <a href="">Home</a>
+      <a href="">About</a>
+      <a href="">Portfolio</a>
+      <a href="">Contact</a>
+    </nav>
+
+    <header>
+      <h1>My Resume</h1>
+    </header>
+
+    <section class="about">
+
+    </section>
+
+    <section class="work-history">
+
+    </section>
+  </div> <!-- closes container div-->
 </body>
 </html>
