--- a/index.html
+++ b/index.html
@@ -23,16 +23,114 @@
     </nav>
 
     <header>
-      <h1>My Resume</h1>
+      <div class="header-box">
+        <div>
+          <img src="Images/sterling.jpg">
+          <h1>Sterling Malory Archer</h1>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+          <button>Lets Team Up</button>
+        </div>
+      </div>
     </header>
 
     <section class="about">
-
+      <div class="about-box1">
+        <h2>About Me</h2>
+        <p>al;fj; aljf; ladsj fl;fdsj; ldsfajk fd;lads fjf
+          ;lajf;ladsfj ;adfsl  jfa ds;ld kjaf  ;lfdj
+         s;adsl  jfd;lfdsa jdfa;lfds jf;lfdjs
+          a;ldkjafl;dskfj
+          ;lkdafj
+          aklj
+          fdsa
+        </p>
+      </div>
+      <div class="about-box2">
+        <h2>Stuff I'm good At</h2>
+        <div class="sub-box">
+          <p>Lacross</p>
+        </div>
+        <div class="sub-box">
+          <p>Killin</p>
+        </div>
+        <div class="sub-box">
+          <p>shootin</p>
+        </div>
+        <div class="sub-box">
+          <p>Lovin</p>
+        </div>
+        <div class="sub-box">
+          <p>Counting</p>
+        </div>
+      </div>
     </section>
 
     <section class="work-history">
-
+      <h2>Work History</h2>
+      <div class="history-box">
+        <div class="yrs">
+          <p>Yrs</p>
+        </div>
+        <div class="company">
+          <p>Company</p>
+        </div>
+        <div class="title">
+          <p>Title</p>
+        </div>
+        <div class="tech-used">
+          <p>Tech Used</p>
+        </div>
+      </div>
+      <div class="history-box" id="gray-back">
+        <div class="yrs">
+          <p>10</p>
+        </div>
+        <div class="company">
+          <p>ISIS</p>
+        </div>
+        <div class="title">
+          <p>Field Agent</p>
+        </div>
+        <div class="tech-used">
+          <p>High Tech</p>
+        </div>
+      </div>
+      <div class="history-box">
+        <div class="yrs">
+          <p>1</p>
+        </div>
+        <div class="company">
+          <p>Seril Agency</p>
+        </div>
+        <div class="title">
+          <p>Private Eye</p>
+        </div>
+        <div class="tech-used">
+          <p>Basic</p>
+        </div>
+      </div>
+      <div class="history-box" id="gray-back">
+        <div class="yrs">
+          <p>1</p>
+        </div>
+        <div class="company">
+          <p>Vice</p>
+        </div>
+        <div class="title">
+          <p>Drug Dealer</p>
+        </div>
+        <div class="tech-used">
+          <p>None</p>
+        </div>
+      </div>
     </section>
+
+    <footer>
+      <p>Copyright Awsomeness 2020</p>
+    </footer>
   </div> <!-- closes container div-->
 </body>
 </html>
