--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
     <header>
       <div class="header-box">
-        <div>
+        <div class="head-box1">
           <img src="Images/sterling.jpg">
-          <h1>Sterling Malory Archer</h1>
-          <p></p>
+          <h1>Sterling Malory Archer - Seceret Agent</h1><br>
+          <p>Worlds deadliest spy</p><br>
         </div>
-        <div>
-          <p></p>
+        <div class="head-box2">
+          <br><p>a;ldskjf d asf dffd adf fd df adffd fa df daf fsa affd fa dfsa df adf adf</p><br>
           <button>Lets Team Up</button>
         </div>
       </div>
@@ -39,13 +39,8 @@
     <section class="about">
       <div class="about-box1">
         <h2>About Me</h2>
-        <p>al;fj; aljf; ladsj fl;fdsj; ldsfajk fd;lads fjf
-          ;lajf;ladsfj ;adfsl  jfa ds;ld kjaf  ;lfdj
-         s;adsl  jfd;lfdsa jdfa;lfds jf;lfdjs
-          a;ldkjafl;dskfj
-          ;lkdafj
-          aklj
-          fdsa
+        <p>Sterling Malory Archer (codenamed 'Duchess') is a fictional character on the American adult animated sitcom Archer, which aired on the basic cable network FX from 2009 to 2017 and is currently broadcast on sister network FXX. Conceived by Adam Reed as the comedy's main protagonist, Sterling is voiced by H. Jon Benjamin. Reed was expected to play the role in the show's original pilot, but was recast because producers felt his voice-over was not suitable for the character's dialogue. Sterling debuted in the first episode of Archer, "Mole Hunt", on September 17, 2009.
+
         </p>
       </div>
       <div class="about-box2">
@@ -54,13 +49,13 @@
           <p>Lacross</p>
         </div>
         <div class="sub-box">
-          <p>Killin</p>
+          <p>Phrasing</p>
         </div>
         <div class="sub-box">
-          <p>shootin</p>
+          <p>Eliminating targets (friendly too)</p>
         </div>
         <div class="sub-box">
-          <p>Lovin</p>
+          <p>Exdcuting the honey pot</p>
         </div>
         <div class="sub-box">
           <p>Counting</p>
@@ -72,16 +67,16 @@
       <h2>Work History</h2>
       <div class="history-box">
         <div class="yrs">
-          <p>Yrs</p>
+          <h3>Yrs</h3>
         </div>
         <div class="company">
-          <p>Company</p>
+          <h3>Company</h3>
         </div>
         <div class="title">
-          <p>Title</p>
+          <h3>Title</h3>
         </div>
         <div class="tech-used">
-          <p>Tech Used</p>
+          <h3>Tech Used</h3>
         </div>
       </div>
       <div class="history-box" id="gray-back">
